# merbots_tracking

./: CMakeLists.txt  README.md  objdet_nodelet.xml  package.xml
include/merbots_tracking/nodelets/: det_and_track_nodelet.h
include/merbots_tracking/object_detector/: ObjectDetector.h
include/merbots_tracking/threads/: TargetDetector.h  TargetTracker.h
include/merbots_tracking/util/: PHOG.h  Params.h  SharedData.h
include/merbots_tracking/wrappers/: KCFVisualTracker.h  StruckVisualTracker.h  VisualTracker.h
launch/: det_and_track.launch  merbots_tracking.launch  objdet_params.yaml  target_selector.launch  tracking_camera.launch  tracking_camera_nodelet.launch  tracking_sequence.launch
msg/: TargetPoints.msg
src/nodelets/: det_and_track_nodelet.cpp
src/nodes/: det_and_track.cpp  seq_publisher.cpp  target_selector.cpp
src/object_detector/: ObjectDetector.cpp
src/threads/: TargetDetector.cpp  TargetTracker.cpp
src/util/: PHOG.cpp  Params.cpp  SharedData.cpp
src/wrappers/: KCFVisualTracker.cpp  StruckVisualTracker.cpp
srv/: SetTarget.srv
trackers/kcf/: CMakeLists.txt  fhog.hpp  runtracker.cpp  tracker.h
trackers/struck/: CMakeLists.txt  README.md  config.txt
trackers/struck/src/: ImageRep.cpp  ImageRep.h  LaRank.cpp  LaRank.h  RawFeatures.h  Tracker.cpp  Tracker.h  main.cpp
